--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "immutable": "^4.0.0-rc.12",
+    "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-immutablejs": "^0.0.8",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
     "standard": "^14.3.3"
   },
   "scripts": {
